# spin

./: Cargo.toml  Makefile  build.rs
crates/outbound-mysql/: Cargo.toml
crates/outbound-pg/: Cargo.toml
crates/outbound-pg/src/: lib.rs
crates/trigger/: Cargo.toml
crates/trigger/src/: lib.rs
examples/rust-outbound-pg/src/: lib.rs
sdk/rust/src/: lib.rs  mysql.rs  pg.rs
tests/: integration.rs
tests/outbound-mysql/http-rust-outbound-mysql/src/: lib.rs
tests/outbound-pg/http-rust-outbound-pg/src/: lib.rs
