[package]
name = "outbound-mysql"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
spin-core = { path = "../core" }
mysql_async = "0.30.0"
mysql_common = "0.29.1"
tokio = { version = "1", features = [ "rt-multi-thread" ] }
tracing = { version = "0.1", features = [ "log" ] }

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"
features = ["async"]
